--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gfycat-api",
+  "name": "gfycat-sdk",
   "version": "1.0.0",
   "description": "Javascript module for gfycat.com API supporting promises and callbacks",
   "main": "index.js",
