--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gfycat-sdk",
   "version": "1.0.8",
   "description": "Javascript module for gfycat.com API supporting promises and callbacks",
-  "main": "lib/gfycat-sdk.js",
+  "main": "lib/index.js",
   "scripts": {
     "compile": "babel src -d lib",
     "prepublish": "npm run compile",
