--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Javascript module for gfycat.com API supporting promises and callbacks",
   "main": "lib/index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack",
-    "compile": "babel src -d lib",
+    "build": "rimraf dist && NODE_ENV=production webpack",
+    "compile": "rimraf lib && babel src -d lib",
     "dev": "python3 -m http.server | NODE_ENV=development webpack",
     "prepublish": "npm run compile | npm run build",
     "test": "npm run compile && istanbul cover _mocha -- ./test.js -R spec"
@@ -34,6 +34,7 @@
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
+    "rimraf": "^2.6.1",
     "sinon": "^1.17.6",
     "webpack": "^2.2.1"
   },
