--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   "homepage": "https://github.com/gfycat/gfycat-sdk#readme",
   "devDependencies": {
     "babel-cli": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.23.0",
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
