--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-runtime": "^6.23.0",
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
@@ -41,5 +40,7 @@
     "sinon": "^1.17.6",
     "webpack": "^2.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-runtime": "^6.23.0"
+  }
 }
